--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -5,18 +5,16 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2025-06-21 22:58+0000\n"
-"PO-Revision-Date: 2025-06-23 13:02+0000\n"
-"Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
-"Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-"
-"mission-book/coop-scenarios/sentinels/de/>\n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.13-dev\n"
+"X-Generator: Poedit 3.6\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
@@ -86,7 +84,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\textit{Es gibt eine Welt jenseits unserer, voller Bestien und Monster, die nur durch eine Formation aus vier heiligen Obelisken in Schach gehalten wird.\n"
-"Doch die Macht dieser Steine schwindet, und ein Bruch steht unmittelbar bevor.\n"
+"Doch die Macht dieser Steine schwindet, und ein Überfall steht unmittelbar bevor.\n"
 "Wenn es so weit ist, stehen nur du und dein Verbündeter zwischen den Horden und der völligen Verwüstung dieser Länder.\n"
 "}\n"
 "\n"
@@ -126,9 +124,7 @@ msgstr ""
 msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
+msgstr "\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:22 clash/dragoncurse_castle.tex:23
@@ -137,7 +133,7 @@ msgid ""
 "\\textbf{Player Count:} 2\n"
 "\n"
 msgstr ""
-"\\textbf{Fraktionsanzahl:} 2\n"
+"\\textbf{Spieleranzahl:} 2\n"
 "\n"
 
 #. type: multicols
@@ -175,8 +171,8 @@ msgid ""
 msgstr ""
 "\\textbf{Starteinheiten:}\n"
 "\\begin{itemize}\n"
-"  \\item 1 \\bronze\\-Einheit mit den \\textit{niedrigsten} Rekrutierungskosten auf der \"Rudel\"-Seite\n"
-"  \\item 1 \\bronze\\-Einheit mit den \\textit{höchsten} Rekrutierungskosten auf der \"Wenige\"-Seite\n"
+"  \\item Ein Rudel \\bronze{}-Einheiten mit den \\textit{niedrigsten} Rekrutierungskosten\n"
+"  \\item Wenige \\bronze{}-Einheiten mit den \\textit{höchsten} Rekrutierungskosten\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -187,7 +183,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
 "\n"
 msgstr ""
-"\\textbf{Startgebäude:} \\bronze\\-Behausung, Zitadelle\n"
+"\\textbf{Startgebäude:} \\bronze{}-Behausung, Zitadelle\n"
 "\n"
 
 #. type: multicols
@@ -197,6 +193,8 @@ msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
+"\\textbf{Gebietsvorrat:} Jeder Spieler erhält zufällig 1 Nahes Gebiet (IV-V) und 1 Fernes Gebiet (II-III). Diese Gebiete sollten keine Obelisken enthalten.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:38
@@ -205,11 +203,13 @@ msgid ""
 "\\textbf{Additional Bonus:} Search (2) the Artifact Deck\n"
 "\n"
 msgstr ""
+"\\textbf{Zusätzlicher Bonus:} Durchsuche (2) den Artefaktstapel\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:40 coops/titans_stronghold.tex:42
 #: coops/titans_stronghold.tex:78
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\vspace*{\\fill}\\columnbreak\n"
 "\n"
@@ -229,7 +229,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Vorbereitung der Abenteuerkarte}}\n"
+"\\subsection*{\\MakeUppercase{Vorbereitung der Karte}}\n"
 "\n"
 
 #. type: multicols*
@@ -241,7 +241,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Nehmt die folgenden Gebiete und platziert sie wie in der Abbildung der Abenteuerkarte gezeigt:\n"
+"Nehmt die folgenden Gebiete und platziert sie wie in der Abbildung der Karte gezeigt:\n"
 "\n"
 
 #. type: multicols
@@ -255,6 +255,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item 2 Startgebiete (I)\n"
+"  \\item 4 Ferne Gebiete (II-III)\n"
+"  \\item 4 Nahe Gebiete (IV-V) mit Obelisk\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:52 coops/titans_stronghold.tex:59
@@ -269,7 +275,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{Sieg}}\n"
 "\n"
 
 #. type: multicols
@@ -279,6 +285,8 @@ msgid ""
 "Defeat all invading armies.\n"
 "\n"
 msgstr ""
+"Besiegt alle einfallenden Armeen.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:56 coops/titans_stronghold.tex:63
@@ -291,7 +299,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{NIederlagenbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{Niederlage}}\n"
 "\n"
 
 #. type: multicols
@@ -301,6 +309,8 @@ msgid ""
 "An undefeated enemy army remains at the end of Round 12.\n"
 "\n"
 msgstr ""
+"Eine unbesiegte Armee des Gegners bleibt am Ende von Runde 12 übrig.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:60
@@ -309,6 +319,8 @@ msgid ""
 "One of your Towns is captured, or a Main Hero is defeated in a battle (retreat doesn't count).\n"
 "\n"
 msgstr ""
+"Eine eurer Städte wird eingenommen oder ein Hauptheld wird im Kampf besiegt (Rückzug zählt nicht).\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:62 coops/titans_stronghold.tex:71
@@ -338,6 +350,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{6. Runde:}\n"
+"\\begin{itemize}\n"
+"  \\item Entfernt alle Statusmarker von allen Wasserrädern, Windmühlen und Mystischen Gärten auf der Abenteuerkarte.\n"
+"  \\item Erschafft eine feindliche Armee mithilfe der untenstehenden Regeln.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:73
@@ -349,6 +367,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{7. und 8. Runde:}\n"
+"\\begin{itemize}\n"
+"  \\item Erschafft eine feindliche Armee mithilfe der untenstehenden Regeln.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:78
@@ -360,6 +383,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{9. Runde:}\n"
+"\\begin{itemize}\n"
+"  \\item Wiederholt die Ereignisse von Runde 6.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:83
@@ -371,6 +399,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{10. Runde:}\n"
+"\\begin{itemize}\n"
+"  \\item Erschafft eine feindliche Armee mithilfe der untenstehenden Regeln.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:85 coops/emerald_island.tex:60
@@ -405,6 +438,18 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Ignoriert alle gelben Linien auf Startgebieten.\n"
+"  \\item Spieler können Ressourcen tauschen, wenn ein Held einen Handelsposten betritt oder auf einem zu einem verbündeten Helden angrenzenden Feld steht.\n"
+"  \\item Der Held, der eine feindliche Armee besiegt, erhält 2 \\svg{experience}.\n"
+"    Der Spieler wirft 2 \\svg{treasure} und handelt 1 davon ab.\n"
+"  \\item Außerdem können Spieler nicht:\n"
+"  \\begin{itemize}\n"
+"      \\item Andere Helden angreifen.\n"
+"      \\item Minen oder Siedlungen einnehmen, die bereits eingenommen wurden.\n"
+"  \\end{itemize}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:99
@@ -413,6 +458,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Enemy Spawning\\\\and Movement}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Gegnererschaffung und\\\\-bewegung}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:109
@@ -429,6 +476,16 @@ msgid ""
 "  \\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Feindliche Armeen werden auf einem zufälligen Obelisken erschaffen (nehmt nicht verwendete Heldenfiguren)\n"
+"  \\item Bestimmt das Feld, indem ihr solange 2 Angriffswürfel werft, bis keine 0 mehr erscheint:\n"
+"  \\begin{itemize}\n"
+"    \\item $+1$/$+1$ = Norden\n"
+"    \\item $+1$/$-1$ = Osten\n"
+"    \\item $-1$/$+1$ = Westen\n"
+"    \\item $-1$/$-1$ = Süden\n"
+"  \\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:114
@@ -440,6 +497,11 @@ msgid ""
 "  \\item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.\n"
 "\n"
 msgstr ""
+"  \\item Für eine balanciertere Verteilung werft ihr in der 7. und 9. Runde nur den zweiten Würfel neu. Der erste Würfel erhält das entgegengesetzte Resultat, das er in der vorigen Runde hatte.\n"
+"  Runden 8 und 10 sind wieder zufällig.\n"
+"  \\item Wenn das Gebiet, auf dem der Gegner platziert werden soll, noch nicht entdeckt wurde, deckt es auf und platziert es in beliebiger Ausrichtung.\n"
+"  \\item Wenn sich ein Held auf dem Gebiet befindet, auf dem der Gegner erschaffen wird, beginnt direkt ein Kampf.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:121
@@ -453,6 +515,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"  \\item Feindliche Armeen haben 3 \\svgeven{movement} pro Runde.\n"
+"  \\item Feindliche Armeen bewegen sich am Ende jedes Zugs ab dem Zug, in dem sie erschaffen wurden.\n"
+"  \\item Feindliche Armeen bewegen sich wie in der Anleitung beschrieben (S. 33), aber anstatt einzunehmen, zerstören sie alles auf ihrem Weg.\n"
+"    Platziert Statuswürfel auf allen Feldern, die sie betreten. Diese Felder werden fortan als leer betrachtet.\n"
+"  \\item Wenn sich ein Gegner in verschiedene Richtungen bewegen könnte, wählen die Spieler die Richtung.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:123
@@ -461,6 +530,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Combat with\\\\Enemy Armies}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Kampf gegen\\\\feindliche Armeen}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:131
@@ -475,6 +546,14 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Kämpfe gegen feindliche Armeen, die länger als eine Kampfrunde dauern, kosten keine \\svgeven{movement}.\n"
+"  \\item Während eines Kampfes gegen eine feindliche Armee, kann sich der Held zurückziehen, wenn eine seiner Einheiten aktiviert wird.\n"
+"    Beim Rückzug verliert der Hauptheld seine verbliebene \\svgeven{movement}, wird auf eine verbündete Stadt oder Siedlung seiner Wahl gesetzt und behält alle übrig gebliebenen Einheiten.\n"
+"  \\item Nebenhelden werden beim Rückzug aus dem Spiel entfernt, aber übrig gebliebene Einheiten bleiben im Spiel.\n"
+"  \\item Besiegte feindliche Einheiten erscheinen nicht wieder.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:133
@@ -483,6 +562,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Boss Army}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Boss-Armee}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:140
@@ -496,6 +577,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item In der 10. Runde wird eine Boss-Armee erschaffen. Sie unterscheidet sich von bisherigen Armeen, da sie durch einen festen Vorrat an neutralen Einheiten verstärkt wird (Vorrat = Zahl in Klammern in untenstehender Tabelle).\n"
+"  \\item Zu Beginn der 2. und jeder folgenden Kampfrunde verstärken 2 Einheiten aus dem gemischten Vorrat die verbliebene Armee (bis zu einem Maximum von 5 Einheiten), bis sich entweder der Spieler zurückzieht oder jede neutrale Einheit des Vorrats besiegt ist. \\textit{Wenn die Anzahl der Gegner zu Beginn einer Runde 1 oder niedriger ist, füllt wieder auf 4 Einheiten auf (d.h. es befinden sich nach der Verstärkung immer 4 oder 5 feindliche Einheiten auf dem Kampf-Spielplan, falls möglich.}\n"
+"  \\item Platziert die Verstärkungen in der hinteren Reihe des Gegners von links nach rechts, beginnend mit der niedrigsten Initiative (\\svg{unit_ranged}-Einheiten zuerst). Falls nötig, werden Einheiten nach diesem Schema in der vorderen Reihe platziert.\n"
+"  \\item Wenn sich ein Spieler zurückzieht, wird die feindliche Armee auf ein Minimum von 4 Einheiten aufgefüllt. Diese sind die Starteinheiten im nächsten Kampf.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:142 coops/close_to_enemies.tex:143
@@ -533,6 +621,9 @@ msgid ""
 "  \\centering\n"
 "  \\node at (14, 2) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
 msgstr ""
+"[overlay]\n"
+"  \\centering\n"
+"  \\node at (14, 6) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
 
 #. type: Plain text
 #: coops/sentinels.tex:192
@@ -561,11 +652,34 @@ msgid ""
 "\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
 "\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 msgstr ""
+"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Schwierigkeitsgrad der "
+"feindlichen Armeen}\\\\ \\bigskip \\let\\origbronze\\bronze "
+"\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
+"\\renewcommand{\\bronze}{\\origbronze[12]} \\renewcommand{\\silver}"
+"{\\origsilver[12]} \\renewcommand{\\golden}{\\origgolden[12]} "
+"\\renewcommand{\\azure}{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}"
+"{p{0.15\\linewidth}XXXX} & \\darkcell{Runden 6 + 7} & \\darkcell{Runden 8 + "
+"9} & \\darkcell{Runde 10}\\\\ \\darkcell[1.4]{Leicht} & \\lightcell[1.4]"
+"{\\bronze \\silver \\silver \\silver \\golden} & \\lightcell[1.4]{\\silver "
+"\\silver \\silver \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver "
+"\\golden \\azure \\footref{azure} \\linebreak (2\\bronze, 4\\silver, "
+"3\\golden, 1\\azure)}\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]"
+"{\\silver \\silver \\silver \\golden \\golden} & \\lightcell[1.4]{\\silver "
+"\\silver \\silver \\golden \\azure} & \\lightcell[1.4]{\\golden \\golden "
+"\\golden \\azure \\footref{azure} \\linebreak (2\\silver, 7\\golden, "
+"1\\azure)}\\\\ \\darkcell[1.4]{Experte} & \\lightcell[1.4]{\\silver \\silver "
+"\\golden \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden "
+"\\golden \\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
+"\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
+"\\darkcell[1.4]{Unmöglich} & \\lightcell[1.4]{\\silver \\golden \\golden "
+"\\golden \\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden "
+"\\azure} & \\lightcell[1.4]{\\golden \\azure \\azure \\azure "
+"\\footref{azure} \\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 
 #. type: Plain text
 #: coops/sentinels.tex:196
 msgid "\\stepcounter{footnote}"
-msgstr ""
+msgstr "\\stepcounter{footnote}"
 
 #. type: footnotetext{#2}
 #: coops/sentinels.tex:196
@@ -573,3 +687,5 @@ msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
+"Immer 1 Einheit Azurdrachen (Starteinheiten der Boss-Armee). Der Rest wird "
+"zufällig bestimmt\\label{azure}."
