--- a/translations/the_hunt.tex/de.po
+++ b/translations/the_hunt.tex/de.po
@@ -70,8 +70,8 @@ msgid ""
 msgstr ""
 "\\textbf{Starteinheiten:}\n"
 "\\begin{itemize}\n"
-"  \\item 1 \\bronze\\-Einheit mit den \\textit{niedrigsten} Rekrutierungskosten auf der \"Rudel\"-Seite\n"
-"  \\item 1 \\bronze\\-Einheit mit den \\textit{höchsten} Rekrutierungskosten auf der \"Wenige\"-Seite\n"
+"  \\item Ein Rudel \\bronze{}-Einheiten mit den \\textit{niedrigsten} Rekrutierungskosten\n"
+"  \\item Wenige \\bronze{}-Einheiten mit den \\textit{höchsten} Rekrutierungskosten\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -87,7 +87,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Vorbereitung der Abenteuerkarte}}\n"
+"\\subsection*{\\MakeUppercase{Vorbereitung der Karte}}\n"
 "\n"
 
 #. type: multicols
