--- a/translations/castle_greek_gift.tex/de.po
+++ b/translations/castle_greek_gift.tex/de.po
@@ -52,7 +52,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
 "\n"
 msgstr ""
-"\\textbf{Startgebäude:} \\bronze\\-Behausung, Zitadelle\n"
+"\\textbf{Startgebäude:} \\bronze{}-Behausung, Zitadelle\n"
 "\n"
 
 #. type: multicols*
@@ -64,7 +64,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Nehmt die folgenden Gebiete und platziert sie wie in der Abbildung der Abenteuerkarte gezeigt:\n"
+"Nehmt die folgenden Gebiete und platziert sie wie in der Abbildung der Karte gezeigt:\n"
 "\n"
 
 #. type: multicols*
@@ -80,7 +80,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{Sieg}}\n"
 "\n"
 
 #. type: multicols
