--- a/translations/inferno_devilish_plan.tex/de.po
+++ b/translations/inferno_devilish_plan.tex/de.po
@@ -70,9 +70,7 @@ msgstr ""
 msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
+msgstr "\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
 
 #. type: multicols
 #: coops/sentinels.tex:42 coops/titans_stronghold.tex:44
@@ -86,7 +84,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Vorbereitung der Abenteuerkarte}}\n"
+"\\subsection*{\\MakeUppercase{Vorbereitung der Karte}}\n"
 "\n"
 
 #. type: multicols*
@@ -98,7 +96,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Nehmt die folgenden Gebiete und platziert sie wie in der Abbildung der Abenteuerkarte gezeigt:\n"
+"Nehmt die folgenden Gebiete und platziert sie wie in der Abbildung der Karte gezeigt:\n"
 "\n"
 
 #. type: multicols*
@@ -114,7 +112,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{Sieg}}\n"
 "\n"
 
 #. type: multicols
@@ -128,7 +126,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{NIederlagenbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{Niederlage}}\n"
 "\n"
 
 #. type: multicols
