--- a/translations/random_scenario.tex/pl.po
+++ b/translations/random_scenario.tex/pl.po
@@ -143,22 +143,28 @@ msgstr ""
 
 #. type: multicols
 #: sections/random_scenario.tex:15
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\subsection*{\\MakeUppercase{Scenario length}}\n"
+#| "\n"
 msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Type}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Typ Scenariusza}}\n"
+"\\subsection*{\\MakeUppercase{Długość Scenariusza}}\n"
 "\n"
 
 #. type: multicols
 #: sections/random_scenario.tex:17
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "You lose if any of the following occur:\n"
+#| "\n"
 msgid ""
 "Choose one of the following types for your play:\n"
 "\n"
 msgstr ""
-"Wybierz jeden z poniższych typów:\n"
+"Przegrywasz, jeśli zdarzy się którekolwiek z poniższych:\n"
 "\n"
 
 #. type: multicols
