--- a/translations/titans_stronghold.tex/de.po
+++ b/translations/titans_stronghold.tex/de.po
@@ -70,9 +70,7 @@ msgstr ""
 msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Spielvorbereitung}}\n"
-"\n"
+msgstr "\\subsection*{\\MakeUppercase{Spielervorbereitung}}\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:26 coops/titans_stronghold.tex:28
@@ -89,7 +87,7 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:40 coops/titans_stronghold.tex:42
 #: coops/titans_stronghold.tex:78
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\vspace*{\\fill}\\columnbreak\n"
 "\n"
@@ -109,7 +107,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Vorbereitung der Abenteuerkarte}}\n"
+"\\subsection*{\\MakeUppercase{Vorbereitung der Karte}}\n"
 "\n"
 
 #. type: multicols*
@@ -125,7 +123,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Siegbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{Sieg}}\n"
 "\n"
 
 #. type: multicols
@@ -139,7 +137,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{NIederlagenbedingungen}}\n"
+"\\subsection*{\\MakeUppercase{Niederlage}}\n"
 "\n"
 
 #. type: multicols
