--- a/translations/back_cover.tex/pl.po
+++ b/translations/back_cover.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-21 22:58+0000\n"
+"POT-Creation-Date: 2025-06-27 09:55+0200\n"
 "PO-Revision-Date: 2024-10-29 23:06+0000\n"
 "Last-Translator: krazanas <krazi321@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -28,11 +28,11 @@ msgstr "\\restoregeometry"
 #: sections/back_cover.tex:12
 msgid ""
 "\\iftoggle{noartbackground}{}{ \\begin{tikzpicture}[remember picture, "
-"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current page."
-"center) { \\includegraphics[height=\\paperheight, keepaspectratio]{\\layout/"
-"back.jpg} }; \\end{tikzpicture} }"
+"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current "
+"page.center) { \\includegraphics[height=\\paperheight, keepaspectratio]"
+"{\\layout/back.jpg} }; \\end{tikzpicture} }"
 msgstr ""
 "\\iftoggle{noartbackground}{}{ \\begin{tikzpicture}[remember picture, "
-"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current page."
-"center) { \\includegraphics[height=\\paperheight, keepaspectratio]{\\layout/"
-"back.jpg} }; \\end{tikzpicture} }"
+"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current "
+"page.center) { \\includegraphics[height=\\paperheight, keepaspectratio]"
+"{\\layout/back.jpg} }; \\end{tikzpicture} }"
