changed starting neutral unit

--- a/clash/trial_by_combat.tex
+++ b/clash/trial_by_combat.tex
@@ -20,7 +20,7 @@ This Scenario plays out over 8-10 Rounds.
 \textbf{Starting Units:}
 \begin{itemize}
   \item A Few cheapest \silver\ Units
-  \item Search (2) Neutral \bronze\ Unit Deck
+  \item A chosen Neutral \bronze\ Unit matching the player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:}
